# anti-slop

./: README.md  config.py  pyproject.toml  requirements.txt  run_gui.py  shared_models.py
core/annotations/: __init__.py  label_store.py
core/eval/: __init__.py  metrics.py  truth_loader.py
core/export/: __init__.py  exporters.py
core/features/: __init__.py  embeddings.py  text_utils.py
core/ingest/: __init__.py  csv_loader.py  normalizer.py  schema_mapper.py  validators.py
core/plugins/: __init__.py  base.py  executor.py  manager.py
core/projection/: __init__.py  clustering.py  reducers.py
core/storage/: __init__.py  paths.py  project_store.py  tables.py
gui/: app.py
gui/pages/: 1_Import.py  2_Review.py  3_Map_2D_3D.py  4_Enrichments_and_Detectors.py  5_Evaluation.py  6_Error_Analysis.py  7_Export.py
gui/utils/: plot_helpers.py  runner.py  state.py  ui_components.py
projects/0980e392-5e58-4806-a41a-81233064f00a/: manifest.json
projects/abf68502-1748-4b58-b908-6e00085218b7/: manifest.json
projects/abf68502-1748-4b58-b908-6e00085218b7/embeddings/: ab4121db-537e-49c9-8865-f6ad0c375bdb_manifest.json
projects/abf68502-1748-4b58-b908-6e00085218b7/projections/: 441639eb-14b2-4b16-bbb8-c48fa37712b8_coords.parquet  (+1 more)
projects/bda28547-bf93-4ec6-9549-7a9164ae8054/: manifest.json
projects/c356d484-2f78-4833-9a83-80addb7a2002/: manifest.json
projects/d3b6d723-b814-4209-aaa8-a3d716dd48c5/: manifest.json
tests/: conftest.py  test_annotations.py  test_end_to_end_smoke.py  test_eval.py  test_ingest.py  test_plugins.py
(+11 files in other folders)
